<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bhabi_home" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
         >

        <Button
            android:id="@+id/pSolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="54dp"
            android:text="@string/pSolo" />

        <Button
            android:id="@+id/pOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pSolo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/pOnline" />

        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pOnline"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/setting" />

        <Button
            android:id="@+id/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setting"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/rules" />

        <Button
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rules"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/score" />

    </RelativeLayout>

</LinearLayout>