<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/play2" >





    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.09"
         >

        <TextView
            android:id="@+id/sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="166dp"
            android:text="@string/sound"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:id="@+id/rAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/sound"
            android:layout_alignLeft="@+id/sound"
            android:layout_marginBottom="36dp"
            android:text="@string/rAdd"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/cBubbles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rAdd"
            android:layout_below="@+id/rAdd"
            android:layout_marginTop="18dp"
            android:text="@string/cBubbles"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/oPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/cBubbles"
            android:layout_below="@+id/cBubbles"
            android:layout_marginTop="14dp"
            android:text="@string/oPlayers"
           android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/oPlayers"
            android:layout_below="@+id/oPlayers"
            android:layout_marginTop="14dp"
         	android:textColor="#000000"
            android:text="@string/avatar"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

</LinearLayout>