<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/play2"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.09" >

        <Button
            android:id="@+id/pla2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:background="@drawable/pla2" />

        <Button
            android:id="@+id/me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="53dp"
            android:background="@drawable/me" />

        <Button
            android:id="@+id/pla1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="28dp"
            android:background="@drawable/pla3" />

        <Button
            android:id="@+id/pla3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/pla1"
            android:layout_alignBottom="@+id/pla1"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@+id/pla2"
            android:background="@drawable/pla1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pla2"
            android:layout_centerHorizontal="true"
            android:text="@string/pla2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/pla1"
            android:layout_below="@+id/pla1"
            android:text="@string/pla1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignRight="@+id/pla3"
            android:text="@string/pla3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/me"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/me"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="74dp"
                android:contentDescription="@string/imgDes"
                android:src="@drawable/ace_clubs_ac" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>